--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -9,10 +9,10 @@ html, body {
 html {
   margin: 0;
   padding: 0;
-  font-family: "Helvetica Neue", Roboto, Arial, sans-serif;
+  font-family: "Noto Sans", "Helvetica Neue", Roboto, Arial, sans-serif;
   font-size: 62.5%;
   color: white;
-  background: linear-gradient(to bottom, #2473ab 0%,#1e528e 70%,#5b7983 100%);
+  background-color: #336699;
 }
 
 body {
